--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="tooltip">search</div>
         </button>
         <button class="button-voice"><img class="voice-icon" src="icons/voice-search-icon.svg" alt="">
-        <div class="tooltip">searcch with your voice </div>
+        <div class="tooltip">search with your voice </div>
         </button>
 
     </div>
